fix(styles): landing: syntax highlighting broken in light mode (#23)

--- a/apps/web/app/globals.css
+++ b/apps/web/app/globals.css
@@ -196,8 +196,7 @@
   html.dark .shiki,
   html.dark .shiki span {
     color: var(--shiki-dark) !important;
-    background-color: var(--shiki-dark-bg) !important;
-    /* Optional, if you also want font styles */
+    background-color: transparent !important;
     font-style: var(--shiki-dark-font-style) !important;
     font-weight: var(--shiki-dark-font-weight) !important;
     text-decoration: var(--shiki-dark-text-decoration) !important;
